TDD dev code with test failing

--- a/RomanToIntConversion/RomanToIntConversionTest/RomanToIntConversionTest.csproj
+++ b/RomanToIntConversion/RomanToIntConversionTest/RomanToIntConversionTest.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RomanToIntConversionDev\RomanToIntConversionDev.csproj">
+      <Project>{c5244b35-aa6b-4666-9660-01df98da485a}</Project>
+      <Name>RomanToIntConversionDev</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
